Alyaska style works

--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
 	</head>
 
 	<body style="margin:0; font-family: monospace;">
-		<canvas id="canvasgl" width=512 height=512 style="height: 100vh; width: 100vw; display: block;"></canvas>
+		<div class='select' style='border:1px solid red; position:absolute;display:none;'></div>
+		<canvas id="canvasgl" style="display: block;"></canvas>
 		<script src=./index.js type='module'></script>
 	</body>
 </html>
